a try to fix scroll on selects (city select) on mobile menu

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -293,6 +293,8 @@ input {
     padding: 5px 0;
     max-height: 200px;
     overflow-y: auto;
+    -webkit-transform: translate3d(0,0,0);
+    -webkit-overflow-scrolling: touch;
 
     &__item {
       padding: 5px 20px;
